fix some css aligning buttons on dashboard and logger

--- a/activitylogger/style.css
+++ b/activitylogger/style.css
@@ -94,8 +94,7 @@ a {
     color: black;
     font-size: large;
 
-    padding-left: 7%;
-    padding-right: 7%;
+
 }
 
 /**/
